[project]
name = "retirement-dashboard"
version = "0.1.0"
description = "Retirement Cashflow Dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["streamlit>=1.40", "pandas>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"